# campus-ai

./: .gitattributes  .gitignore  README.md  gitignore
ai-worker/: .dockerignore  Dockerfile  README.md  config.py  env.example  face.py  kb.py  llm.py  main.py  mentor.py  observability.py  pyproject.toml  rag.py  resume.py  schemas.py  scoring.py  tracing.py
ai-worker/evals/: run_evals.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  academics.py  activate_user.py  admin.py  ai_client.py  analytics.py  announcements.py  assignments.py  attendance.py  audit.py  auth.py  calendar_events.py  config.py  conftest.py  db.py  diag_active.py  diag_rls.py  diag_users.py  doubts.py  e2e_smoke.py  eca.py  face.py  files.py  institute.py  internship.py  leads.py  leaveod.py  list_users.py  main.py  materials.py  mentor.py  models.py  observability.py  people.py  placement.py  placement_analytics.py  projects.py  (+18 more)
backend/alembic/: env.py
backend/alembic/versions/: 17ef053b73a2_timetable_entries.py  1d61da8d89e7_add_user_section_id_for_class_rosters.py  272b71151028_add_placement_applications.py  2d2fd7f1d652_leave_requests_table.py  3373ec44204e_add_attendance_records.py  34bf973440f8_add_skills_and_projects.py  35b6cebe2884_add_attendance_records.py  39c0c6ae1151_add_departments_and_sections.py  39f0e19688c2_add_subjects_and_results.py  3e08c06f1bab_add_placement_drives.py  522dfeadcde6_multitenancy_phase2a_tenant_invites_.py  58b5d0352ed3_add_announcements_table.py  6357ee539628_multitenancy_phase1_tenants_table_users_.py  6442c17bd684_doubt_forum_doubts_answers_votes.py  (+30 more)
backend/scripts/: disable_unpolicied_rls.sql  setup_app_user.sql
backend/tests/: test_auth.py  test_files.py  test_health.py  test_moat.py  test_rate_limit.py  test_rbac.py  test_rls.py  test_rls_postgres.py  test_tenant_isolation.py
(+103 files in other folders)
