[project]
name = "ai-worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.138.0",
    "langchain>=1.3.11",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "pydantic-settings>=2.14.2",
    "uvicorn[standard]>=0.49.0",
]
